Fixed unit tests. Style changes.

--- a/build.xml
+++ b/build.xml
@@ -12,8 +12,9 @@
     "source-own-jar"  Package source into separate jar file. -->
   <target name="include-source" depends="source-own-jar" />
   
-  <property name="domain.name"    value="bits" />  
-  <property name="jvm.target"     value="1.5" />
+  <property name="domain.name"    value="bits" />
+  <property name="jvm.source"     value="1.6" />
+  <property name="jvm.target"     value="1.6" />
   <property name="dst.dir"        value="target" />
   <property name="dst.name"       value="${domain.name}_${ant.project.name}" />
   <property name="src.dir"        value="src/main/java" />
